<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_view_title"
        android:textSize="30sp"
        android:layout_marginBottom="70dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="20sp"
        android:text="@string/btn_login_str"
        android:onClick="onClickCreateOrder"/>
</LinearLayout>