<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity"
    android:background="@color/teal_700">

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_order_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/radioGroupTypeOfDrink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginBottom="8dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tea"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTypeOfDrink"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        />

    <CheckBox
        android:id="@+id/checkboxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/checkboxLemon"
        />

    <CheckBox
        android:id="@+id/checkboxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toEndOf="@id/checkboxMilk"
        app:layout_constraintEnd_toStartOf="@id/checkboxSugar"

        />

    <CheckBox
        android:id="@+id/checkboxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkboxLemon"
        />

    <TextView
        android:id="@+id/textviewChooseDrink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_type_drink"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkboxLemon"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        />

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textviewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/options_of_tea"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        />

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textviewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/options_of_coffee"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn"
        android:layout_margin="25dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/btn_send_order"/>


</androidx.constraintlayout.widget.ConstraintLayout>